# eureka-grpc-py

./: README.md  pyproject.toml
eureka_grpc/: __init__.py
eureka_grpc/contracts/: __init__.py  artifacts.py  deploy.py
eureka_grpc/harness/: attestor.py
eureka_grpc/ibc_attestor/: attestation_pb2.py  attestation_pb2_grpc.py  ibc_attestor_pb2.py  ibc_attestor_pb2_grpc.py
eureka_grpc/relayer/: binary.py  relayer_pb2.py  relayer_pb2_grpc.py
ibc_eureka/: __init__.py
ibc_eureka/contracts/: artifacts.py  deploy_sp1.py
ibc_eureka/harness/: __init__.py  process.py  relayer.py
ibc_eureka/relayer/: binary.py  client.py
protos/eureka/: README.md
scripts/: regen-stubs.sh
