[project]
name = "eureka-grpc-py"
version = "0.1.0"
description = "Python gRPC client stubs for the ibc-eureka-relayer proof API + attestor service."
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.80.0",
    "protobuf>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eureka_grpc"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.80.0",
]