[project]
name = "ibc-eureka-py"
version = "0.1.0"
description = "Python SDK for IBC Eureka: gRPC stubs for the relayer proof API + attestor, plus optional relayer client, process harness, and contract compile/deploy helpers."
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.80.0",
    "protobuf>=6.0.0",
]
# The base install is stubs-only. The optional wrapper modules expect the consumer
# to supply their deps (none are declared here): ibc_eureka.relayer.binary needs
# web3 + eth-account/eth-contract/eth-typing/hexbytes; ibc_eureka.harness.attestor
# needs eth-utils. ibc_eureka.harness.{process,relayer} are pure stdlib.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ibc_eureka"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.80.0",
]